--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
     <a href="#">Cookies Policy</a>
   </footer>
 
-  <script src="scripts.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-storage.js"></script>
+  <script type="module" src="scripts.js"></script>
 </body>
 </html>
