--- a/index.html
+++ b/index.html
@@ -115,11 +115,12 @@
     <a href="#">Terms of Service</a>
     <a href="#">Cookies Policy</a>
   </footer>
-
   <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-storage.js"></script>
+  
+  <!-- Custom Script with Firebase Configuration (type="module" for imports in custom scripts) -->
   <script type="module" src="scripts.js"></script>
 </body>
 </html>
