--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
   <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-storage.js"></script>
   
   <!-- Custom Script with Firebase Configuration (type="module" for imports in custom scripts) -->
-  <script type="module" src="scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
