--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <li><a href="https://cover-letter-generator.internexxus.com/">Cover Letter Generator</a></li>
       <li><a href="https://internexxus.com/internships/?filter-orderby=newest&jobs_ppp=12">Explore Internships</a></li>
     </ul>
-    <a href="#" class="sign-up-btn">Sign Up</a>
+    <a href="#" id="sign-up-btn" class="sign-up-btn">Sign Up</a>
   </nav>
 
   <!-- Hero Section -->
   <section class="hero">
     <h1>Boost Your Resume's Success with AI</h1>
     <p>Ensure your resume passes through Applicant Tracking Systems with flying colors.</p>
-    <button class="cta-btn">Get Started</button>
+    <button id="get-started-btn" class="cta-btn">Get Started</button>
   </section>
 
   <!-- Product Section -->
