--- a/index.html
+++ b/index.html
@@ -115,12 +115,19 @@
     <a href="#">Terms of Service</a>
     <a href="#">Cookies Policy</a>
   </footer>
-  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-storage.js"></script>
+  <!-- Firebase App (compatibility version) -->
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app-compat.js"></script>
   
+  <!-- Firebase Authentication (compatibility version) -->
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-auth-compat.js"></script>
+  
+  <!-- Firebase Firestore (compatibility version) -->
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore-compat.js"></script>
+  
+  <!-- Firebase Storage (compatibility version) -->
+  <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-storage-compat.js"></script>
+
   <!-- Custom Script with Firebase Configuration (type="module" for imports in custom scripts) -->
-  <script type="module" src="scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
