--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,12 @@
             </ul>
             <a href="#" class="sign-out-btn">Sign Out</a>
         </nav>
-
+        <div class="loader" id="loader">
+            <div class="sparkle"></div>
+            <div class="sparkle"></div>
+            <div class="sparkle"></div>
+            <div class="sparkle"></div>
+          </div>          
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
