--- a/dashboard.html
+++ b/dashboard.html
@@ -22,13 +22,7 @@
                 <li><a href="https://internexxus.com/internships/?filter-orderby=newest&jobs_ppp=12">Explore Internships</a></li>
             </ul>
             <a href="#" class="sign-out-btn">Sign Out</a>
-        </nav>
-        <div class="loader" id="loader">
-            <div class="sparkle"></div>
-            <div class="sparkle"></div>
-            <div class="sparkle"></div>
-            <div class="sparkle"></div>
-          </div>          
+        </nav>        
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
@@ -151,6 +145,13 @@
       </div>
     </div>
   </section>
+  <div class="loader" id="loader">
+    <video autoplay loop muted playsinline class="loader-video">
+      <source src="assets/loader.webm" type="video/webm">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  
         <!-- Footer -->
         <footer>
             <a href="#">Privacy Policy</a>
