--- a/dashboard.html
+++ b/dashboard.html
@@ -1,28 +1,29 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dashboard</title>
-        <link rel="stylesheet" href="dashboard.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
-    </head>
-    <body>
-        <!-- Navigation -->
-        <nav>
-            <div class="logo">
-                <a href="https://internexxus.com">
-                    <img width="220" height="42" src="assets/logo.jpg" alt="Logo">
-                </a>
-            </div>
-            <ul>
-                <li><a href="https://cover-letter-generator.internexxus.com/">Cover Letter Generator</a></li>
-                <li><a href="https://internexxus.com/internships/?filter-orderby=newest&jobs_ppp=12">Explore Internships</a></li>
-            </ul>
-            <a href="#" class="sign-out-btn">Sign Out</a>
-        </nav>        
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="dashboard.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav>
+        <div class="logo">
+            <a href="https://internexxus.com">
+                <img width="220" height="42" src="assets/logo.jpg" alt="Logo">
+            </a>
+        </div>
+        <ul>
+            <li><a href="https://cover-letter-generator.internexxus.com/">Cover Letter Generator</a></li>
+            <li><a href="https://internexxus.com/internships/?filter-orderby=newest&jobs_ppp=12">Explore Internships</a></li>
+        </ul>
+        <a href="#" class="sign-out-btn">Sign Out</a>
+    </nav>        
+
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
@@ -68,96 +69,98 @@
         </div>
     </section>
 
-
-        <!-- Product Section -->
+    <!-- Product Section -->
     <section class="product-section">
         <div class="product-content">
-        <!-- Left side: Description -->
-        <div class="product-description">
-            <h2>Discover the Power of Our Products</h2>
-            <p>
-            At Internexus, we offer a comprehensive suite of tools designed to enhance your job search experience. Our Cover Letter Generator crafts personalized cover letters that stand out, while the Resume Analyser and Builder helps you create and refine resumes that showcase your strengths. Ensure your application passes through screening systems with our ATS Compatibility Checker, and optimize your professional profile with our LinkedIn Optimizer. Each product is tailored to give you a competitive edge in your career journey.
-            </p>
-        </div>
+            <!-- Left side: Description -->
+            <div class="product-description">
+                <h2>Discover the Power of Our Products</h2>
+                <p>
+                    At Internexus, we offer a comprehensive suite of tools designed to enhance your job search experience. Our Cover Letter Generator crafts personalized cover letters that stand out, while the Resume Analyser and Builder helps you create and refine resumes that showcase your strengths. Ensure your application passes through screening systems with our ATS Compatibility Checker, and optimize your professional profile with our LinkedIn Optimizer. Each product is tailored to give you a competitive edge in your career journey.
+                </p>
+            </div>
 
-        <!-- Right side: Product Cards -->
-        <div class="product-cards">
-            <div class="product-card">
-            <h3>01</h3>
-            <p>Upload Resume</p>
-            <p id="card-info-odd">Upload your resume to the tool</p>
-            </div>
-            <div class="product-card">
-            <h3>02</h3>
-            <p>Upload Job Description</p>
-            <p id="card-info-even">Upload or paste the targeted job description</p>
-            </div>
-            <div class="product-card">
-            <h3>03</h3>
-            <p>Review Suggestions</p>
-            <p id="card-info-odd">Get suggestions on how to improve your resume for ATS compatibility</p>
-            </div>
-            <div class="product-card">
-            <h3>04</h3>
-            <p>Download Compatible Resume</p>
-            <p id="card-info-even">Download the optimized resume for ATS submission</p>
+            <!-- Right side: Product Cards -->
+            <div class="product-cards">
+                <div class="product-card">
+                    <h3>01</h3>
+                    <p>Upload Resume</p>
+                    <p id="card-info-odd">Upload your resume to the tool</p>
+                </div>
+                <div class="product-card">
+                    <h3>02</h3>
+                    <p>Upload Job Description</p>
+                    <p id="card-info-even">Upload or paste the targeted job description</p>
+                </div>
+                <div class="product-card">
+                    <h3>03</h3>
+                    <p>Review Suggestions</p>
+                    <p id="card-info-odd">Get suggestions on how to improve your resume for ATS compatibility</p>
+                </div>
+                <div class="product-card">
+                    <h3>04</h3>
+                    <p>Download Compatible Resume</p>
+                    <p id="card-info-even">Download the optimized resume for ATS submission</p>
+                </div>
             </div>
         </div>
-        </div>
-
     </section>
+
     <!-- ATS Compatibility Section -->
     <section class="ats-section">
         <div class="ats-container">
-        <div class="ats-image">
-            <img src="assets/ats.jpeg" alt="ATS Compatibility">
-        </div>
-        <div class="ats-text">
-            <h3>ATS Compatibility Check</h3>
-            <p>Instantly scan your resume to see how well it aligns with Applicant Tracking Systems.</p>
-            <h3>Keyword Optimization</h3>
-            <p>Receive suggestions on how to optimize your resume with relevant keywords for better ATS performance.</p>
-            <h3>Customized Feedback</h3>
-            <p>Get personalized feedback on how to improve your resume's compatibility with ATS.</p>
-        </div>
+            <div class="ats-image">
+                <img src="assets/ats.jpeg" alt="ATS Compatibility">
+            </div>
+            <div class="ats-text">
+                <h3>ATS Compatibility Check</h3>
+                <p>Instantly scan your resume to see how well it aligns with Applicant Tracking Systems.</p>
+                <h3>Keyword Optimization</h3>
+                <p>Receive suggestions on how to optimize your resume with relevant keywords for better ATS performance.</p>
+                <h3>Customized Feedback</h3>
+                <p>Get personalized feedback on how to improve your resume's compatibility with ATS.</p>
+            </div>
         </div>
     </section>
 
     <!-- Testimonials Section -->
-<section class="testimonials">
-    <h2>Testimonials</h2>
-    <div class="testimonial-cards">
-      <div class="testimonial-card">
-        <p><img src="/path/to/johndoe.jpg" alt="John Doe"> <span class="name">John Doe</span><br><span class="position">HR Manager</span></p>
-        <p>5 stars</p>
-      </div>
-      <div class="testimonial-card">
-        <p><img src="/path/to/janesmith.jpg" alt="Jane Smith"> <span class="name">Jane Smith</span><br><span class="position">Recruitment Specialist</span></p>
-        <p>Great tool for ensuring resumes get through ATS seamlessly.</p>
-      </div>
-      <div class="testimonial-card">
-        <p><img src="/path/to/davidjohnson.jpg" alt="David Johnson"> <span class="name">David Johnson</span><br><span class="position">Talent Acquisition Lead</span></p>
-        <p>This tool has been a game-changer for our hiring team.</p>
-      </div>
-      <div class="testimonial-card">
-        <p><img src="/path/to/emilybrown.jpg" alt="Emily Brown"> <span class="name">Emily Brown</span><br><span class="position">HR Coordinator</span></p>
-        <p>Our recruitment process has become much more efficient.</p>
-      </div>
-    </div>
-  </section>
-  <div class="loader" id="loader">
-    <video autoplay loop muted playsinline class="loader-video">
-      <source src="assets/loader.webm" type="video/webm">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  
-        <!-- Footer -->
-        <footer>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Cookies Policy</a>
-        </footer>
-        <script src="app.js"></script>
-    </body>
-    </html>
+    <section class="testimonials">
+        <h2>Testimonials</h2>
+        <div class="testimonial-cards">
+            <div class="testimonial-card">
+                <p><img src="/path/to/johndoe.jpg" alt="John Doe"> <span class="name">John Doe</span><br><span class="position">HR Manager</span></p>
+                <p>5 stars</p>
+            </div>
+            <div class="testimonial-card">
+                <p><img src="/path/to/janesmith.jpg" alt="Jane Smith"> <span class="name">Jane Smith</span><br><span class="position">Recruitment Specialist</span></p>
+                <p>Great tool for ensuring resumes get through ATS seamlessly.</p>
+            </div>
+            <div class="testimonial-card">
+                <p><img src="/path/to/davidjohnson.jpg" alt="David Johnson"> <span class="name">David Johnson</span><br><span class="position">Talent Acquisition Lead</span></p>
+                <p>This tool has been a game-changer for our hiring team.</p>
+            </div>
+            <div class="testimonial-card">
+                <p><img src="/path/to/emilybrown.jpg" alt="Emily Brown"> <span class="name">Emily Brown</span><br><span class="position">HR Coordinator</span></p>
+                <p>Our recruitment process has become much more efficient.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Service</a>
+        <a href="#">Cookies Policy</a>
+    </footer>
+
+    <!-- Loader -->
+    <div class="loader" id="loader" style="display: none;">
+        <video autoplay loop muted playsinline class="loader-video">
+            <source src="assets/loader.webm" type="video/webm">
+            Your browser does not support the video tag.
+        </video>
+    </div>        
+
+    <script src="app.js"></script>
+</body>
+</html>
