--- a/dashboard.html
+++ b/dashboard.html
@@ -110,7 +110,7 @@
     <section class="ats-section">
         <div class="ats-container">
             <div class="ats-image">
-                <img src="assets/ats.jpeg" alt="ATS Compatibility">
+                <img class="ats-image" src="assets/ats.jpeg" alt="ATS Compatibility">
             </div>
             <div class="ats-text">
                 <h3>ATS Compatibility Check</h3>
