Fina final commit

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
             <li><a href="https://cover-letter-generator.internexxus.com/">Cover Letter Generator</a></li>
             <li><a href="https://internexxus.com/internships/?filter-orderby=newest&jobs_ppp=12">Explore Internships</a></li>
         </ul>
-        <a href="#" class="sign-out-btn">Sign Out</a>
+        <a href="#" class="sign-out-btn" id="sign-out-btn">Sign Out</a>
     </nav>        
 
     <!-- Hero Section -->
