--- a/dashboard.html
+++ b/dashboard.html
@@ -124,11 +124,11 @@
                 <div class="education-item">
                     <div class="form-grid">
                         <div>
-                            <label>Certificate Title:</label>
+                            <label>Degree Title:</label>
                             <input type="text" value="" disabled />
                         </div>
                         <div>
-                            <label>Issuing Organization:</label>
+                            <label>University:</label>
                             <input type="text" value="" disabled />
                         </div>
                     </div>
