--- a/dashboard.html
+++ b/dashboard.html
@@ -47,6 +47,9 @@
                 <a href="#personal-details" class="sidebar-item active">
                     <img src="assets/user.png" alt="Personal Details">
                 </a>
+                <a href="#contact-details" class="sidebar-item">
+                    <img src="assets/contact.png" alt="Contact Details">
+                </a>
                 <a href="#education" class="sidebar-item">
                     <img src="assets/edu.png" alt="Education">
                 </a>
@@ -79,41 +82,31 @@
                     </div>
                 </div>
 
-                <div class="form-grid">
-                    <div>
-                        <label for="primary-phone">Primary Phone Number</label>
-                        <input type="text" id="primary-phone" placeholder="(xxx)-xxx-xxxx">
-                    </div>
-                    <div>
-                        <label for="secondary-phone">Secondary Phone Number</label>
-                        <input type="text" id="secondary-phone" placeholder="(xxx)-xxx-xxxx">
-                    </div>
-                </div>
-
-                <div class="form-grid">
-                    <div>
-                        <label for="primary-email">Primary Email</label>
-                        <input type="email" id="primary-email" placeholder="xxx@xxx.xxx">
-                    </div>
-                    <div>
-                        <label for="backup-email">Backup Email</label>
-                        <input type="email" id="backup-email" placeholder="xxx@xxx.xxx">
-                    </div>
-                </div>
-
-                <div class="form-grid">
-                    <div>
-                        <label for="personal-location">Location</label>
-                        <input type="text" id="personal-location" placeholder="Start Typing...">
-                    </div>
-                </div>
-
-                <!-- Professional Summary Field -->
                 <div class="form-grid full-width">
                     <label for="summary">Professional Summary</label>
                     <textarea id="summary" placeholder="Write a brief summary of your professional background."></textarea>
                 </div>
 
+                <button class="next-button">Next →</button>
+            </section>
+
+            <!-- Contact Details Section -->
+            <section id="contact-details" class="form-section">
+                <h2>Enter Your <span>Contact Details</span></h2>
+                <div class="form-grid">
+                    <div>
+                        <label for="phone">Phone Number</label>
+                        <input type="text" id="phone" placeholder="(xxx)-xxx-xxxx">
+                    </div>
+                    <div>
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" placeholder="example@example.com">
+                    </div>
+                </div>
+                <div class="form-grid full-width">
+                    <label for="personal-location">Address</label>
+                    <input type="text" id="personal-location" placeholder="Your address">
+                </div>
                 <button class="next-button">Next →</button>
             </section>
 
