--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Loader -->
+    <div class="loader" id="loader" style="display: none;">
+        <video autoplay loop muted playsinline class="loader-video">
+            <source src="assets/loader.webm" type="video/webm">
+            Your browser does not support the video tag.
+        </video>
+    </div> 
     <header class="navbar">
         <div class="logo">
             <a href="index.html">
