--- a/dashboard.html
+++ b/dashboard.html
@@ -34,19 +34,21 @@
         <h1>Choose Your Resume Format</h1>
         <!-- Resume Selection Section -->
         <section id="resume-selection" class="resume-selection">
-            <div class="resume-option" data-format="resume1">
+            <div class="resume-option">
                 <div class="resume-thumbnail">
                     <img src="resumes/resume_1.png" alt="Resume Format 1">
                 </div>
-                <button class="select-resume-btn">Select Template 1</button>
+                <button id="template" class="select-resume-btn">Select Template 1</button>
             </div>
-            <div class="resume-option" data-format="resume2">
+            <div class="resume-option">
                 <div class="resume-thumbnail">
                     <img src="resumes/resume_2.png" alt="Resume Format 2">
                 </div>
-                <button class="select-resume-btn">Select Template 2</button>
+                <button id="template1" class="select-resume-btn">Select Template 2</button>
             </div>
         </section>
+    </main>
+
     <footer class="footer">
         <p>Privacy Policy | Terms of Service | Cookies Policy</p>
         <p>&copy; 2024 Internexxus. All rights reserved.</p>
