--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Form - Enter Details</title>
     <link rel="stylesheet" href="css/dashboard.css">
+    <!-- Font Awesome for feedback icon -->
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+      integrity="sha512-papXzJ5V+0ox+zLCW5pJF+WICYtZ5MWIuSpOSl5QkMXZiL6WhUvQ+GjIYRiqJNTVmezxtc2t3FNIEnF3zYdYKg==" 
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer" 
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -52,7 +60,17 @@
     <footer class="footer">
         <p>Privacy Policy | Terms of Service | Cookies Policy</p>
         <p>&copy; 2024 Internexxus. All rights reserved.</p>
+        <!-- Feedback Icon Link -->
+        <a 
+          href="https://docs.google.com/forms/d/e/1FAIpQLScNasBW9L3uEO9pOjVAXyN4fcIefJpOOXflB4k_CsaXCo9zAw/viewform?usp=sharing" 
+          target="_blank" 
+          class="feedback-icon" 
+          title="Give Feedback"
+        >
+          <i class="fas fa-question-circle fa-2x"></i>
+        </a>
     </footer>
+
     <!-- Script Placement -->
     <script src="scripts/dashboard.js"></script>
 </body>
